--- a/requirements.txt
+++ b/requirements.txt
@@ -4,35 +4,19 @@
 #
 #    pip-compile
 #
-attrs==22.2.0
-    # via pytest
-colorama==0.4.6
-    # via pytest
 et-xmlfile==1.1.0
     # via openpyxl
-exceptiongroup==1.1.0
-    # via pytest
-iniconfig==2.0.0
-    # via pytest
 numpy==1.24.1
     # via pandas
 openpyxl==3.0.10
-    # via -r requirements.in
-packaging==23.0
-    # via pytest
+    # via dataanalysis (setup.py)
 pandas==1.5.2
-    # via -r requirements.in
-pluggy==1.0.0
-    # via pytest
-pytest==7.2.0
-    # via -r requirements.in
+    # via dataanalysis (setup.py)
 python-dateutil==2.8.2
     # via pandas
 pytz==2022.7
     # via pandas
 six==1.16.0
     # via python-dateutil
-tomli==2.0.1
-    # via pytest
 xlsxwriter==3.0.6
-    # via -r requirements.in
+    # via dataanalysis (setup.py)
