--- a/.github/workflows/linting.yml
+++ b/.github/workflows/linting.yml
@@ -17,22 +17,8 @@ jobs:
       uses: actions/setup-python@v4
       with:
         python-version: ${{ matrix.python-version }}
+        cache: pip
     - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install -r dev-requirements.txt
-    - name: Lint with flake8
-      run: |
-        # stop the build if there are Python syntax errors or undefined names
-        flake8 dataanalysis tests --count --select=E9,F63,F7,F82 --show-source --statistics
-        # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
-        flake8 dataanalysis tests --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
-    - name: Lint with black
-      run: |
-        black . --check
-    - name: Lint with isort
-      run: |
-        isort . --check
-    - name: Typechecking with mypy
-      run: |
-        mypy dataanalysis tests
+      run: pip install -e .
+    - name: Lint
+      run: hatch run lint:all
