--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -19,6 +19,8 @@ jobs:
         python-version: ${{ matrix.python-version }}
         cache: pip
     - name: Install dependencies
-      run: pip install -e .
+      run: |
+        pip install -e .
+        pip install hatch
     - name: Run tests
       run: hatch run test
